# rgdb

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  main.rs  token.rs  tui.rs
src/components/: code.rs  copy_string.rs  gdbmi.rs  gdbtty.rs  home.rs  mouse_select.rs  startpage.rs  statusbar.rs
src/components/code/: asmfuncdata.rs  breakpoint.rs  srcfiledata.rs  test.rs
src/mi/: breakpointmi.rs  disassemble.rs  frame.rs  miout.lalrpop  mod.rs  token.rs
src/themes/: Nord.tmTheme
src/tool/: mod.rs
test/: buildall.sh  gen_big_cpp.py  generated_big_cpp.py
